tests/sksl/errors/ArrayTooManyDimensionsInStruct.glsl
### Compilation failed:

error: 1: multi-dimensional arrays are not supported
struct S { float x[2][2]; };
           ^^^^^^^^^^^^^
1 error
